[gd_scene load_steps=4 format=3 uid="uid://duu00ypj1dd7q"]

[ext_resource type="Texture2D" uid="uid://c4wsf7xhekjld" path="res://assets/ui/abilities/Frame_05.png" id="1_hcyk0"]
[ext_resource type="Script" path="res://scenes/UI/abilities/ability_button.gd" id="2_p2b3e"]
[ext_resource type="Texture2D" uid="uid://cifl84hiiomxs" path="res://assets/ui/abilities/coldown.png" id="2_uc0xu"]

[node name="AbilityButton" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("1_hcyk0")
stretch_mode = 0
script = ExtResource("2_p2b3e")

[node name="Coldown" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 36.0
offset_bottom = 36.0
step = 0.01
fill_mode = 5
texture_progress = ExtResource("2_uc0xu")
tint_progress = Color(1, 1, 1, 0.45098)

[node name="Timer" type="Timer" parent="."]

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="lblColdown" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 39.0
offset_bottom = 31.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "0.0"
horizontal_alignment = 1

[node name="lblKey" type="Label" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 19.0
offset_right = 37.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "1"

[node name="AbilityIcon" type="Sprite2D" parent="."]
position = Vector2(4, 4)
centered = false

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
